// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BreadcrumbLayout /> with multiple breadcrumbs should render correctly 1`] = `
<div
  className="BreadcrumbLayout"
  data-testid="BreadcrumbLayout"
>
  <Layout>
    <div
      className="LayoutContent content-container"
    >
      <nav
        aria-label="breadcrumb"
        className="BreadcrumbContent"
      >
        <ol
          className="flex"
        >
          <li
            className="flex"
          >
            <ActiveLink
              activeClassName="ActiveBreadcrumbItem"
              className="BreadcrumbItem"
              href="/"
            >
              Home
            </ActiveLink>
            <div
              className="px-3"
            >
              /
            </div>
          </li>
          <li
            className="flex"
          >
            <ActiveLink
              activeClassName="ActiveBreadcrumbItem"
              className="BreadcrumbItem"
              href="/topics"
            >
              topics
            </ActiveLink>
          </li>
        </ol>
      </nav>
      <div
        className="mt-8"
      />
    </div>
  </Layout>
</div>
`;

exports[`<BreadcrumbLayout /> without breadcrumbs should render correctly 1`] = `
<div
  className="BreadcrumbLayout"
  data-testid="BreadcrumbLayout"
>
  <Layout>
    <div
      className="LayoutContent content-container"
    >
      <nav
        aria-label="breadcrumb"
        className="BreadcrumbContent"
      >
        <ol
          className="flex"
        />
      </nav>
      <div
        className="mt-8"
      />
    </div>
  </Layout>
</div>
`;
